@@ -1,3 +1,8 @@
+Wed Nov 17 11:48:17 2004  Michael Neumann  <mneumann@ruby-lang.org>
+
+	* lib/xmlrpc/parser.rb, test/xmlrpc/test_features.rb: fixed "assinging
+	  to constants" warnings
+
 Wed Nov 17 18:59:16 2004  Kazuhiro NISHIYAMA  <zn@mbf.nifty.com>
 
 	* process.c (proc_getrlimit, proc_setrlimit): add rb_secure(2) to
